# lucky-passbook

./: .gitignore  README.md  pyproject.toml
notebooks/: Data Exploring.ipynb  NCF after SVD.ipynb  NCF via Content.ipynb  Parallel Hybrid Model and Test Base Model.ipynb  Parallel Hybrid Model.ipynb  Rating Classification.ipynb  Testing Algorithms Content Based.ipynb  Testing Algorithms.ipynb  by_Leo.ipynb  test_hybird_model.py
recom_system/: __init__.py  db.py
recom_system/algorithms/: __init__.py  errors.py  io.py  metrics.py  preprocessing.py  registration.py
recom_system/algorithms/models/: __init__.py  base.py  svd_nn.py  weighted_model.py
recom_system/algorithms/models/content_based/: __init__.py  popular_shelves.py
recom_system/algorithms/models/dict_based/: __init__.py  popular_shelves.py
recom_system/algorithms/models/hybird/: __init__.py  knn_via_content.py  knn_via_content_boosted.py  ncf_via_content.py  svd_nn.py
recom_system/algorithms/models/nn/: __init__.py  ncf.py
recom_system/algorithms/models/vector_based/: __init__.py  (+1 more)
recom_system/server/: __init__.py  books.py  ratings.py  recommendations.py
recom_system/server/static/: index.html
webpages/: README.md  index.html  package-lock.json  package.json  vite.config.js
webpages/src/: App.vue  main.js
webpages/src/assets/: api.js  base.css  main.css  theme.css
webpages/src/components/: BannerItem.vue  BookDetailsItem.vue  BookItem.vue  BookListItem.vue  ColdStartItem.vue  SearchItem.vue
webpages/src/router/: index.js
webpages/src/views/: HomeView.vue  LoginView.vue  ProfileView.vue
(+23 files in other folders)
